--- a/Responsive-Web-Design/Tribute-Page/tribute.html
+++ b/Responsive-Web-Design/Tribute-Page/tribute.html
@@ -1,10 +1,24 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../../css/reset.css">
         <link rel="stylesheet" type="text/css" href="./css/tribute.css">
     </head>
     <body>
-
+        <div id="main">
+            <div id="title">
+                <h1>Benjamin Franklin "Hawkeye" Pierce</h1>
+                <p>placeholder</p>
+            </div>
+            <div id="img-div">
+                <img id="image">
+                <caption id="img-caption"></caption>
+            </div>
+            <div id="tribute-info">
+                <p>put a timeline here</p>
+                <span>quote here</span>
+                <a href="https://mash.fandom.com/wiki/Benjamin_Franklin_%22Hawkeye%22_Pierce" target="_blank">Read more here</a>
+            </div>
+        </div>
     </body>
 </html>
