add content and some css

--- a/Responsive-Web-Design/Tribute-Page/tribute.html
+++ b/Responsive-Web-Design/Tribute-Page/tribute.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../../css/reset.css">
+        <!-- <link rel="stylesheet" type="text/css" href="../../css/reset.css"> -->
         <link rel="stylesheet" type="text/css" href="./css/tribute.css">
     </head>
     <body>
         <div id="main">
             <div id="title">
-                <h1>Benjamin Franklin "Hawkeye" Pierce</h1>
-                <p>placeholder</p>
+                <h1>Alan Alda</h1>
+                <p>Actor, author, activist, and more</p>
             </div>
             <div id="img-div">
-                <img id="image">
-                <caption id="img-caption"></caption>
+                <img id="image" src="./images/alanHawkeye.jpg">
+                <caption id="img-caption">Alan Alda as Benjamin Franklin "Hawkeye" Pierce on the set of M*A*S*H.</caption>
             </div>
             <div id="tribute-info">
-                <p>put a timeline here</p>
-                <span>quote here</span>
-                <a href="https://mash.fandom.com/wiki/Benjamin_Franklin_%22Hawkeye%22_Pierce" target="_blank">Read more here</a>
+                <h2>A timeline of Alda's life:</h2>
+                <ul>
+                    <li><strong>1936</strong> - Born as Alphonso Joseph D'Abruzzo in NYC</li>
+                    <li><strong>1943</strong> - Contracted polio at the age of 7</li>
+                    <li><strong>1950s</strong> - Began his acting career</li>
+                    <li><strong>1956</strong> - Earned a Bachelor of Arts degree in English from Fordham University</li>
+                    <li><strong>1958</strong> - Joined the Cleveland Play House with a grant from the Ford Foundation where he appeared in plays such as <i>To Dorothy A Son</i>, <i>Heaven Come Wednesday</i>, and <i>Monique</i>.</li>
+                    <li><strong>1964</strong> - Played Felix the Owel in the world premier stage version of <i>The Owl and The Pussycat</i> at the ANTA Playhouse</li>
+                    <li><strong>1966</strong> - Nominated for a Tony Award for his role as the musical <i>The Apple Tree</i></li>
+                    <li><strong>1972-1983</strong> - Played the role of Benjamin Franklin "Hawkeye" Pierce in the Korean War drama M*A*S*H. He was nominated for 21 emmys and won five. He wrote 19 episodes and directed 32, including the series finale <i>Goodbye, Farewell and Amen</i> which is still the most watched episode of any American broadcast network TV series.</li>
+                    <li><strong>1983</strong> - Continued his acting career and started appearing in films created by his friend Woody Allen eventually reuniting with his M*A*S*H co-star David Ogden Stiers who played Charles Emmerson Winchester III</li>
+                    <li><strong>1993 - 2005</strong> - Hosted the PBS show Scientific American Frontiers.</li>
+                    <li><strong>2005</strong> - Published his first memoir titled <i>Never Have Your Dog Stuffed: and Other Things I've Learned</i></li>
+                    <li><strong>2018</strong> - Announced on <i>CBS This Morning</i> he had been diagnosed with Parkinson's disease three years earlier</li>
+                </ul>
+                <blockquote>At time you have to leave the city of your comfort to go into the wilderness of your intuition. What you'll discover will be wonderful. What you'll discover is yourself.</blockquote>
+                <cite>Alan Alda</cite>
+                <a href="https://en.wikipedia.org/wiki/Alan_Alda" target="_blank">Read more about Alan Alda here</a>
             </div>
         </div>
     </body>
