--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 !<!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./css/reset.css">
+        <link rel="stylesheet" type="text/css" href="./css/sanitize.css">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body>
