Mostly finished project. Media queries need work

--- a/Responsive-Web-Design/Tribute-Page/tribute.html
+++ b/Responsive-Web-Design/Tribute-Page/tribute.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <link rel="stylesheet" type="text/css" href="../../css/reset.css"> -->
+        <link rel="stylesheet" type="text/css" href="../../css/sanitize.css">
         <link rel="stylesheet" type="text/css" href="./css/tribute.css">
     </head>
     <body>
@@ -12,7 +12,7 @@
             </div>
             <div id="img-div">
                 <img id="image" src="./images/alanHawkeye.jpg">
-                <caption id="img-caption">Alan Alda as Benjamin Franklin "Hawkeye" Pierce on the set of M*A*S*H.</caption>
+                <div id="img-caption">Alan Alda as Benjamin Franklin "Hawkeye" Pierce on the set of M*A*S*H.</div>
             </div>
             <div id="tribute-info">
                 <h2>A timeline of Alda's life:</h2>
@@ -30,10 +30,10 @@
                     <li><strong>2005</strong> - Published his first memoir titled <i>Never Have Your Dog Stuffed: and Other Things I've Learned</i></li>
                     <li><strong>2018</strong> - Announced on <i>CBS This Morning</i> he had been diagnosed with Parkinson's disease three years earlier</li>
                 </ul>
-                <blockquote>At time you have to leave the city of your comfort to go into the wilderness of your intuition. What you'll discover will be wonderful. What you'll discover is yourself.</blockquote>
-                <cite>Alan Alda</cite>
-                <a href="https://en.wikipedia.org/wiki/Alan_Alda" target="_blank">Read more about Alan Alda here</a>
+                <blockquote>"At times you have to leave the city of your comfort to go into the wilderness of your intuition. What you'll discover will be wonderful. What you'll discover is yourself."</blockquote>
+                <cite> -- Alan Alda</cite>
+                <h3>Read more about Alda's life by checking out his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Alda" target="_blank">Wikipedia page</a>.</h3>
             </div>
         </div>
     </body>
-</html>
+</html> 
