start project list

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./css/sanitize.css">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body>
-
+        <div>
+            <h3>Responsive Web Design Projects</h3>
+            <ol>
+                <li><a href="./Responsive-Web-Design/Tribute-Page/tribute.html">Tribute Page</a></li>
+            </ol>
+        </div>
     </body>
 </html>
