Finish up html and css

--- a/Responsive-Web-Design/Survey-Form/survey.html
+++ b/Responsive-Web-Design/Survey-Form/survey.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1 id="title">Survey Form</h1>
-        <div>
+        <div class="formArea">
             <p>Let us know how we can improve FreeCodeCamp</p>
             <form id="survery-form">
                 <div class="rows">
@@ -15,7 +15,7 @@
                         <label for="name" id="name-label">* Name</label>
                     </div>
                     <div class="inputs">
-                        <input autofocus type="text" id="name" placeholder="Enter your name" required>
+                        <input class="inputField" autofocus type="text" id="name" placeholder="Enter your name" required>
                     </div>
                 </div>
                 <div class="rows">
@@ -23,7 +23,7 @@
                         <label for="email" id="email-label">* Email</label>
                     </div>
                     <div class="inputs">
-                        <input type="email" id="email" placeholder="Enter your email" required>
+                        <input class="inputField" type="email" id="email" placeholder="Enter your email" required>
                     </div>
                 </div>
                 <div class="rows">
@@ -31,7 +31,7 @@
                         <label for="age" id="age-label">* Age</label>
                     </div>
                     <div class="inputs">
-                        <input type="number" id="age" placeholder="Age" min="1" max="120" required>
+                        <input class="inputField" type="number" id="age" placeholder="Age" min="1" max="120" required>
                     </div>
                 </div>
                 <div class="rows">
@@ -145,6 +145,7 @@
                         <textarea name="comments" id="comments" cols="30" rows="3" placeholder="Enter your comment here..."></textarea>
                     </div>
                 </div>
+                <button type="submit" id="submit">Submit</button>
             </form>
         </div>
     </body>
